--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 exceptiongroup==1.1.3
+greenlet==2.0.2
 iniconfig==2.0.0
 packaging==23.1
 pluggy==1.3.0
 pytest==7.4.2
+SQLAlchemy==2.0.21
 tomli==2.0.1
+typing_extensions==4.8.0
