--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,14 @@
 {
     "name": "Allocation",
-    "image": "python:3.11-bookworm",
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "allocation",
     "workspaceFolder": "/workspace",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
     "postCreateCommand": "pip install -r requirements.txt",
+    "shutdownAction": "stopCompose",
+    "forwardPorts": [
+        5432,
+        5005
+    ],
     "customizations": {
         "vscode": {
             "extensions": [
