--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
 exceptiongroup==1.1.3
+Flask==2.3.3
 greenlet==2.0.2
+idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 packaging==23.1
 pluggy==1.3.0
+psycopg2==2.9.8
 pytest==7.4.2
+requests==2.31.0
 SQLAlchemy==2.0.21
 tomli==2.0.1
 typing_extensions==4.8.0
+urllib3==2.0.5
+Werkzeug==2.3.7
