--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ packaging==23.1
 pluggy==1.3.0
 psycopg2==2.9.8
 pytest==7.4.2
+redis==5.0.1
 requests==2.31.0
 SQLAlchemy==2.0.21
+tenacity==8.2.3
 tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.5
