src/allocation (as a package)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,7 @@ ARG USER_GID=1000
 WORKDIR /code
 COPY . .
 
-ENV PYTHONPATH=$PYTHONPATH:/code
+ENV PYTHONPATH=$PYTHONPATH:/code/src
 
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
