--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
@@ -13,6 +14,8 @@ MarkupSafe==2.1.3
 packaging==23.1
 pluggy==1.3.0
 psycopg2==2.9.8
+pydantic==2.4.2
+pydantic_core==2.10.1
 pytest==7.4.2
 redis==5.0.1
 requests==2.31.0
